--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0",
+    "@angular-devkit/build-angular": "^17.3.2",
     "@angular-eslint/builder": "^17.0.0",
     "@angular-eslint/eslint-plugin": "^17.0.0",
     "@angular-eslint/eslint-plugin-template": "^17.0.0",
@@ -45,6 +45,7 @@
     "@angular/language-service": "^17.0.2",
     "@capacitor/cli": "5.7.4",
     "@ionic/angular-toolkit": "^9.0.0",
+    "@ionic/lab": "^3.2.15",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
